GS-6912
Setting pu.download set to false (not recommended in 7.0) causes failure to deploy a processing unit

svn path=/trunk/gigaspaces/; revision=56224


Former-commit-id: f5a77a2aa0e17b65b8325e46334f20c1858c373f